profilelist1exp/unpackaged/objects/Sell_Out__c.object
<CustomObject>
    <fields>
        <fullName>Account_Reseller__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - ||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R9.9 S # 38383 ||</description>
        <label>Account/Reseller</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Sold__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - ||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R9.9 S # 38383 ||</description>
        <label>Date Sold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - ||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R9.9 S # 38383 ||</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sell Out Item</relationshipLabel>
        <relationshipName>R00N70000002DQwjEAG</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Line_Item_Id__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - ||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R9.9 S # 38383 ||</description>
        <label>Product Line Item Id (DO NOT MODIFY)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Item__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - ||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R9.9 S # 38383 ||</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Product_Line_Item_Id__c , Name , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Sold__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - ||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R9.9 S # 38383 ||</description>
        <label>Quantity Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sell Out</label>
    <nameField>
        <label>Sell Out Name (DO NOT MODIFY)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sell Outs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>